change dispaly flex in html and css

--- a/day11/index.html
+++ b/day11/index.html
@@ -71,22 +71,22 @@
           <br><br><br>
           
           <div id="one">
-           <p1>Hello</p1>
-           <p1>every</p1>
-           <p1>one</p1>
-           <p1>Wellcome</p1>
-           <p1>to</p1>
-           <p1>my</p1>
-           <p1>website</p1>
-           <p1>i'm so happy ;)</p1>
+           <p>Hello</p>
+           <p>every</p>
+           <p>one</p>
+           <p>Wellcome</p>
+           <p>to</p>
+           <p>my</p>
+           <p>website</p>
+           <p>i'm so happy ;)</p>
           </div>
 
           <br><br><br>
 
           <div id="two">
-           <p2>Love</p2>
-           <p2>You</p2>
-           <p2>God</p2>
+           <p>Love</p>
+           <p>You</p>
+           <p>God</p>
           </div>
 
           <br><br><br>
