--- a/day12/index.html
+++ b/day12/index.html
@@ -9,19 +9,12 @@
 </head>
 <body>
       
-          <div id="container">
-           <div id="item">
-            <span>1</span>
-           </div>
-           <div id="item">
-            <span>2</span>
-           </div>
-           <div id="item">
-            <span>3</span>
-           </div>
-           <div id="item">
-            <span>4</span>
-           </div>
+
+          <div id="container2">
+            <div id="transform-div">
+              
+            </div>
           </div>
+
 </body>
 </html>
