add change index.html

--- a/day24/index.html
+++ b/day24/index.html
@@ -16,8 +16,7 @@
                </div>
 
                <div id="nav-buttons">
-
-                       <input type="text" name="" id="">
+                       <input type="" name="" id="">
                        <input type="text" name="" id="">
                        <input type="text" name="" id="">
                </div>
