add index.html file change

--- a/day24/index.html
+++ b/day24/index.html
@@ -11,14 +11,10 @@
           <div id="container">
            <div id="header">
             <nav>
-               <div id="nav-website-logo">
-
-               </div>
-
                <div id="nav-buttons">
-                       <input type="" name="" id="">
-                       <input type="text" name="" id="">
-                       <input type="text" name="" id="">
+                <input type="text">
+                <input type="text">
+                <input type="text">
                </div>
 
           </div>
