add change index.html file

--- a/day24/index.html
+++ b/day24/index.html
@@ -11,11 +11,20 @@
           <div id="container">
            <div id="header">
             <nav>
-               <div id="nav-buttons">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-               </div>
+               
+                <div id="nav-website-logo">
+                    <br><br><br><br><br>
+                    <div id="nav-name-header">
+                        <span>SabaTms Website</span>
+
+                      </div> 
+                </div>
+                
+                <ul>
+                    <a href="#">Product</a>
+                    <a href="#">About us</a>
+                    <a href="#">Contact us</a>
+                </ul>
 
           </div>
          </body>
