--- a/day24/index.html
+++ b/day24/index.html
@@ -15,17 +15,53 @@
                 <div id="nav-website-logo">
                     <br><br><br><br><br>
                     <div id="nav-name-header">
-                        <span>SabaTms Website</span>
+                        <span>Saba Tms Website</span>
 
                       </div> 
                 </div>
                 
-                <ul>
-                    <a href="#">Product</a>
-                    <a href="#">About us</a>
-                    <a href="#">Contact us</a>
-                </ul>
+                <div id="nav-buttons">
+                    <a href="#">
+                    <input type="button" value="Conect Us">
+                    </a>
+                    <a href="#">
+                     <input type="button" value="Resome">
+                    </a> 
+                    <a href="#">
+                     <input type="button" value="About Me">
+                    </a> 
+                </nav>
 
-          </div>
+                <div id="header-content">
+                   <h1>Hello Everyone!&#129505</h1>
+                   <p>
+                       I am Saba Tahmasebi Nezhad Shirazi :
+                       <br>
+                      I'm Front-end programming student;
+                       I'm so glad you're looking at my website and I hope you enjoy it.
+                   </p>
+                  <h3>
+                    :من صبا طهماسبی نژاد شیرازی هستم
+                    <br>
+                 ;دانشجوی برنامه نویسی دوره فرانت اند
+                 <br>
+                 خیلی خوشحالم که به وب سایت من نگاه میکنید و امیدوارم که لذتش رو ببرید 
+                 <br>
+                  &#128591 
+                  </h3>
+                  <div id="container-footer">
+                    <h2 style="color: rgb(245, 123, 8);">Follow me in Social Media:</h2>
+                    <img src="wallpaper/icons8-linkedin---in-logo-used-for-professional-networking,-48.png" alt="">
+                    <img src="wallpaper/icons8-instagram-48.png" alt="icons8-instagram-48">
+                    <img src="wallpaper/icons8-facebook-48.png" alt="icons8-facebook-48">
+                    <img src="wallpaper/icons8-whatsapp-48.png" alt="icons8-whatsapp-48">
+                    <img src="wallpaper/icons8-youtube-48.png" alt="icons8-youtube-48">
+                    <img src="wallpaper/icons8-twitter-48.png" alt="icons8-twitter-48">
+                  </div>
+    
+                </div>
+                </div>
+              </div>
+
          </body>
         </html>
