update index.html file

--- a/day25/index.html
+++ b/day25/index.html
@@ -4,10 +4,37 @@
           <meta charset="UTF-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>Day25</title>
+          <title>Day25 Practice flex</title>
           <link rel="stylesheet" href="style.css">
 </head>
 <body>
-          
+          <div id="container">
+            <div id="item">
+            <span>1</span>
+             </div>
+            <div id="item">
+              <span>2</span>
+            </div>
+            <div id="item">
+              <span>3</span>
+            </div>
+            <div id="item">
+              <span>4</span>
+            </div>
+            <div id="item">
+              <span>5</span>
+               </div>
+              <div id="item">
+                <span>6</span>
+              </div>
+              <div id="item">
+                <span>7</span>
+              </div>
+              <div id="item">
+                <span>8</span>
+              </div>
+  
+
+          </div>
 </body>
 </html>
