add index.html file

--- a/day31/index.html
+++ b/day31/index.html
@@ -9,11 +9,9 @@
 </head>
 <body>
           <div id="container">
-                    <div>
-                            <div>
-                              this is for test over-flow & bax-sizing.
-                            </div>  
-                    </div>
+             <input type="text" name="" id="">
           </div>
+
+          
 </body>
 </html>
